--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 </head>
 	
 <body>
-	<h1>Chào mừng!<br><span>Anh đến với thế giới của sự chân thành</span></h1>
-	<div class="login-box">
-		<form action="index1.html" method="get">
+	<h1>Chào mừng!<br>
+	  <span>Anh đến với thế giới của sự chân thành</span></h1>
+<div class="login-box">
+	<form action="index1.html" method="get">
 			<input type="text" class="text" value="Nhập tên anh ở đây" id="tenanh" autocomplete="off" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Nhập tên anh ở đây';}" >
 			<input type="text1" class="text" value="Giờ nhập tên em ở đây" id="myname" autocomplete="off" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Giờ nhập tên em ở đây';}">
 			<input type="submit" class="btn" id="dangnhap" value="Nhấn vào đây"  onClick="return checkTenanh()" >
